<resources>
    <string name="app_name">Turismo Basavilbaso</string>
    <string name="txtBienvenido">Bienvenidos</string>
    <string name="txtBandera">Bandera de Basavilbaso</string>
    <string name="botonAtractivos">Atractivos</string>
    <string name="botonAlojamientos">Alojamientos</string>
    <string name="botonGastronomia">Gastronomia</string>
    <string name="botonTelefonos">Telefonos Utiles</string>
    <string name="botonPlano">Plano de la Ciudad</string>
    <string name="botonFotos">Fotos</string>
    <string name="txtFotos">Fotos</string>

    <string name="txtPlano">Plano de la Ciudad</string>
    <string name="btnMaps">ver en Google Maps</string>
    <string name="txtBomberos">Bomberos</string>
    <string name="telBomberos">+54 3445 482018</string>
    <string name="txtCorreo">Correo</string>
    <string name="telCorreo">+54 3445 481621</string>
    <string name="txtHospital">Hospital</string>
    <string name="telHospital">+54 3445 481281</string>
    <string name="txtMunicipalidad">Municipalidad</string>
    <string name="telMunicipalidad">+54 3445 481055</string>
    <string name="txtPolicia">Policia</string>
    <string name="telPolicia">+54 3445 481281</string>
    <string name="txtpolideport">Polideportivo</string>
    <string name="telpolideport">+54 3445 481380</string>
    <string name="txtBoleteria">Flechabus</string>
    <string name="telBoleteria">+54 3445 482129</string>
    <string name="txtRemises">Remises </string>
    <string name="txtServicentro">Servi-Centro</string>
    <string name="telServicentro">+54 3445 481000</string>
    <string name="txtServife">Servi-Fe</string>
    <string name="telServife">+54 3445 482400</string>

    <string name="txtAtractivos">Atractivos</string>
    <string name="txtTermas">Termas de \nBasavilbaso</string>
    <string name="txtDirTermas">Ruta 20 \nKm. 93</string>
    <string name="txtCircuito">Circuito de las Colonias Judías</string>
    <string name="txtDirCircuito">Asociación Israelita</string>
    <string name="txtMuseoFerroviario">Museo Ferroviario</string>
    <string name="txtDirMuseoFerroviario">Podesta e I. Neyra</string>
    <string name="txtMuseoHistórico">Museo Histórico Regional</string>
    <string name="txtDirMuseoHistorico">Av. Pte Peron y Av. San Martín</string>
    <string name="txtCasaMuseo">Casa Museo "La Posta del Aviador"</string>
    <string name="txtDirCasaMuseo">Quiróz 569</string>

    <string name="txtAlojamientos">Alojamientos</string>

    <string name="txtHotel5Soles">Hotel \"5 Soles\"</string>
    <string name="txtDirHotel5Soles">Estrada 730</string>
    <string name="txtHotelRobert">Hotel \"Robertito\"</string>
    <string name="txtDirHotelRobert">Ramirez\n esq I.Neyra</string>
    <string name="txtDelOeste">Apart Hotel\n \"Del Oeste\"</string>
    <string name="txtDirDelOeste">Estrada 729</string>
    <string name="txtDelSol">Apart Hotel\n \"Del Sol\"</string>
    <string name="txtDirDelSol">Rogelio\nGómez 569</string>
    <string name="txtMBurucuya">Apart Hotel\n \"M'Burucuya\"</string>
    <string name="txtDirMBurucuya">Tucuman 229</string>
    <string name="txtElTala">Apart Hotel\n \"El Tala\"</string>
    <string name="txtDirElTala">Uchitel 1295</string>
    <string name="txtElNe">Departamentos\n \"El-Ne\"</string>
    <string name="txtDirElNe">V. del Rio \nde la Plata 425</string>
    <string name="txtBungTermas">Bungalows\nde Termas</string>
    <string name="txtDirBungTermas">Parque termal\nRuta 20 Km 93</string>
    <string name="txtCampPoli">Camping Polidep.\n \"Gral. San Martín\"</string>
    <string name="txtDirCampPoli">Suipacha e\nYrigoyen</string>

    <!--Gastronomia-->
    <string name="txtLaChacra">Comedor Parrila\n\"La Chacra\"</string>
    <string name="txtDirLaChacra">Av. Urquiza 609</string>
    <string name="txtClemente">Restaurant\n\"Clemente\"</string>
    <string name="txtDirClemente">Parque termal\n Ruta 20 Km 93</string>
    <string name="txtComRobertito">Comedor Hotel\n\"Robertito\"</string>
    <string name="txtDirComRobertito">Ramirez\n esq I. Neyra</string>
    <string name="txtElBar">Resto Bar\n\"El Bar\"</string>
    <string name="txtDirElBar">Av. San Martín\n476</string>
    <string name="txtBahamas">Resto Bar\n\"Bahamas Pub\"</string>
    <string name="txtDirBahamas">Av. San Martín\n451</string>
    <string name="txtLaOchava">Rotiseria\n\"La Ochava\"</string>
    <string name="txtDirLaOchava">Av. 25 de Mayo\n esq 3 de Febrero</string>
    <string name="txtPipols">Pizzeria\n\"Pipol\'s\"</string>
    <string name="txtDirPipols">Rogelio\nGomez 335</string>
    <string name="txtHilda">El Almacen\nde Hilda</string>
    <string name="txtDirHilda">Av. San Martín\n370</string>
    <string name="txtComTip">Comidas Típicas</string>
    <string name="txtBobe">\"Las Comidas\nde la Bobe\"</string>
    <string name="txtDirBobe">Quiroz 203</string>
    <string name="txtSara">Sara Guiter\nde Moguilevsky</string>
    <string name="txtDirSara">B. Hirsch 283</string>

    <!--Fotos-->
    <string name="txtFotoPoli">Polidep. Gral. San Martín</string>
    <string name="txtFotoMusHist">Museo Historico Regional</string>
    <string name="txtMusFerro">Museo Ferroviario</string>
    <string name="txtSinMoises">Sinagoga T L\' Moises</string>
    <string name="txtSinNov">Sinagoga Novibuco</string>
</resources>
