<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logoturismogestion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:text="@string/txtBienvenido"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageViewBandera"
        android:layout_width="168dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:srcCompat="@drawable/banderabassoapp" />

    <ScrollView
        android:id="@+id/scrollViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="260dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAtractivos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:onClick="abrirAtractivos"
                android:text="@string/botonAtractivos"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnAlojamientos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:onClick="abrirAlojamientos"
                android:text="@string/botonAlojamientos"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnGastronomia"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:onClick="abrirGastronomia"
                android:text="@string/botonGastronomia"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnTelefonos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:onClick="abrirTelefonos"
                android:text="@string/botonTelefonos"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPlano"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:onClick="abrirPlano"
                android:text="@string/botonPlano"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnFotos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="abrirFotos"
                android:text="@string/botonFotos"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewBandera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:text="@string/txtBandera"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>