<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelUtilActivity">

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/botonTelefonos"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="426dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtBomberos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtBomberos"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/telBomberos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telBomberos"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallBomberos"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

        </TableRow>


        <View
            android:layout_height="7dp"
            android:background="#FFFFFF" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCorreo"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/telCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telCorreo"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallCorreo"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="#FFFFFF" />


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHospital"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telHospital"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallHospital"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="#FFFFFF" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMunicipalidad"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telMunicipalidad"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallMunicipalidad"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/txtMunicipalidad"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="#FFFFFF" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPolicia"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telPolicia"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallPolicia"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/txtPolicia"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="#FFFFFF" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>