<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtractivosActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logoturismogestion" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtAtractivos"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="422dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTermas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtTermas"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dirTermas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirTermas"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallTermas"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

        </TableRow>
        <View
            android:layout_height="7dp"
            android:background="@android:color/transparent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCircuito"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirCircuito"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>
        <View
            android:layout_height="7dp"
            android:background="@android:color/transparent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMuseoHistórico"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirMuseoHistorico"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallMuseoHisto"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="@android:color/transparent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMusFerro"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirMuseoFerroviario"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnCallMuseoFerro"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <View
            android:layout_height="7dp"
            android:background="@android:color/transparent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCasaMuseo"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirCasaMuseo"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>